--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,5 @@ python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
 python-multipart>=0.0.7
 anyio>=4.2.0
+pywebpush>=1.14.0
+cryptography>=42.0.0
